--- a/apps/mantine.dev/src/pages/guides/storybook.mdx
+++ b/apps/mantine.dev/src/pages/guides/storybook.mdx
@@ -90,7 +90,7 @@ the following content:
 import '@mantine/core/styles.css';
 
 import { useEffect } from 'react';
-import { addons } from '@storybook/preview-api';
+import { addons } from 'storybook/preview-api';
 import { DARK_MODE_EVENT_NAME } from 'storybook-dark-mode';
 import {
   MantineProvider,
